# nxp_mcxn547_zephyr

./: .gitignore  README.md  flex_env.sh
app/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  sections-rom.ld  sysbuild.conf
app/src/: device_control.c  device_control.h  eeprom.c  eeprom.h  ethernet.c  ethernet.h  isotp_service.c  isotp_service.h  main.c  pmi_update.c  pmi_update.h  psram.c  psram.h  qspi_nor.c  qspi_nor.h  web_server.c  web_server.h
app/sysbuild/: mcuboot.conf
bootloader/: README.md
patches/mcuboot/: README.md
tools/: flex_release.sh
